test/lit/pto/tget_scale_addr_verify_invalid.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

func.func @tget_scale_addr_verify_invalid() {
  %src = pto.declare_tile -> !pto.tile_buf<loc=left, dtype=f8E4M3FN, rows=1, cols=128, v_row=1, v_col=128, blayout=col_major, slayout=row_major, fractal=512, pad=0>
  %dst = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f16, rows=1, cols=128, v_row=1, v_col=128, blayout=row_major, slayout=none_box, fractal=512, pad=0>

  pto.tget_scale_addr ins(%src : !pto.tile_buf<loc=left, dtype=f8E4M3FN, rows=1, cols=128, v_row=1, v_col=128, blayout=col_major, slayout=row_major, fractal=512, pad=0>)
                      outs(%dst : !pto.tile_buf<loc=vec, dtype=f16, rows=1, cols=128, v_row=1, v_col=128, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
  return
}

// CHECK: error: 'pto.tget_scale_addr' op expects dst to be in the scaling address space
